<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">hello</string>
    <string name="app_name">Lanbahn Panel</string>
    <string name="sxnet_server_settings">Lanbahn Settings</string>
    <string name="ip_address_of_server">Multicast IP Address</string>
    <string name="port">Multicast Port</string>
    <string name="panel">Panel</string>
    <string name="settings">Settings</string>
    <string name="about">Info</string>
    <string name="reconnect">Re-Connect</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="disp_settings">Display Settings</string>
    <string name="loco_address">Loco Address (1..103) </string>
    <string name="draw_addresses">Display Turnout/Signal Addresses</string>
    <string name="enableZoom">Enable Panel Zoom</string>
    <string name="enableEdit">Enable Edit Mode</string>
    <string name="enable_power_control">Enable Global Power On/Off Control</string>
    <string name="power">Power</string>
    <string name="enableDemo" translatable="false">Enable Demo Mode</string>
    <string name="flipUpsideDown">view panel element from the other side</string>
    <string name="saveStates">Save States of Device on Appl. Pause/Stop</string>
    <string name="enableAllAdresses">Enable ALL valid lanbahn addresses</string>
    <string name="enableRoutes">Enable Routes (=autom. Signal States)</string>
    <string name="usStyle">US Style</string>
    <string name="quit">Exit Program.</string>
    <string name="edit">Edit On/Off</string>
    <string name="exit_confirm">Do you really want to stop the program?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="adresse">Address</string>
    <string name="adresse2">Addr.2</string>
    <string name="sel_loco_prompt">Loco Auswahl</string>
    <string name="sel_style">Select Display Style</string>
    <string name="sel_style_default">US</string>
    <string name="aboutString">"LanbahnPanel is free software - you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, version 3. LanbahnPanel is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  For details about the GNU General Public License see http://www.gnu.org/licenses "</string>
    <string name="copyright_string" translatable="false">Copyright 2014-2019 - Michael Blank - mblank@bawue.de</string>
    <string name="usageString">to be used with SX4 program or SX3-PC program (SELECTRIX) or LbServer (FREMO, LocoNet)</string>
    <string name="moreInfoString">more info on https://opensx.net/lanbahnpanel</string>
    <string name="lanbahnpanelTitleString" translatable="false">LanbahnPanel</string>
    <string name="versionUnknown">version x.x</string>
    <string name="unknown">-?-</string>
    <string name="wifi_disconnected">No Wifi !</string>
    <string name="draw_routebtn_addresses">Display RouteBtn/Sensor Addresses</string>
    <string name="general_settings" translatable="false">Settings</string>
    <string name="files_settings" translatable="false">Config Files</string>
    <string name="default_sxnet_port" translatable="false">4104</string>
    <string name="default_server_ip" translatable="false">192.168.2.50</string>
    <string name="questionmark">-?-</string>
    <string name="notification_title">LanbahnPanel running</string>
    <string name="notification_text">re-open LanbahnPanel</string>
    <string name="default_notification_channel_id" translatable="false">lanbahn_default_channel</string>

    <string name="default_notification_channel_name" translatable="false">Lanbahn</string>
    <string name="check_service" translatable="false">Check Service</string>
    <string name="panel_cfg_files" translatable="false">Panel XML Config File</string>
    <string name="server_ip">Server IP address</string>
    <string name="server_port">Server port</string>
    <string name="not_connected" translatable="false">currently not connected to a server</string>
    <string name="get_panel_from_server">Download panel file from server</string>
    <string name="enableAutoscale">Automatic scale</string>
    <string name="sel_scale">Select type of scaling</string>
    <string name="sel_scale_default" translatable="false">auto</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_server" translatable="false">Server</string>
    <string name="pref_header_display" translatable="false">Display</string>
    <string name="pref_header_control" translatable="false">Control</string>
    <string name="display_five_views">Display 5 views (full + 4 quadrants)</string>


    <string name="add_loco">Add new Loco</string>
    <string name="remove_loco">Remove Loco</string>
    <string name="edit_loco">Edit Loco</string>
    <string name="are_you_sure_this_will_overwrite_existing_current_data">Are you sure (this will overwrite existing current data)?</string>
    <string name="are_you_sure_this_will_overwrite_any_existing_backup_data">Are you sure (this will overwrite any existing backup data)?</string>
    <string name="external_storage_is_not_available_unable_to_export_data">External storage is not available, unable to export data.</string>
    <string name="different_icon">anderes Lok-Icon</string>
    <string name="add_loco_to_xml_file" translatable="false">add_loco_to_xml_file</string>
    <string name="add_loco_title">Add Loco Title</string>
    <string name="name">Loco Name</string>
    <string name="back">back</string>
    <string name="address">Loco Address</string>
    <string name="store_changes">Store changes?</string>
    <string name="add_new_loco">Add new Loco?</string>
    <string name="selectloco">select Loco</string>
    <string name="select">Select</string>
    <string name="no_locos">No Locos</string>
    <string name="locodb" translatable="false">Loco DB</string>
    <string name="error_enter_address_first">ERROR: please enter loco ADDRESS first!</string>
    <string name="error_enter_name_first">ERROR: please enter NAME first!</string>
    <string name="sx_adresse">Selectrix Adresse</string>
    <string name="_sx_bit" translatable="false">" SX-Bit"</string>
    <string name="inverted">"invert"</string>
    <string name="yes_inverted">Y</string>
    <string name="no_inverted">N</string>
    <string name="loco_cfg_files" translatable="false">Loco Config File</string>
    <string name="pref_header_loco">Loco Control</string>
    <string name="discover_turnouts">Discover new Turnouts</string>
    <string name="routing_active">Routing ON</string>
    <string name="save">Save</string>
    <string name="route_invalid">Route cannot be set!</string>
    <string name="route_locked">Route (turnouts) locked, cannot be set!</string>
    <string name="sel_system_type">Select Control System Type</string>
    <string name="display_five_quadrants">Display 5 views (full + 4 quadrants)</string>
</resources>