<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory android:title="@string/disp_settings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="drawAddressesPref"
            android:title="@string/draw_addresses" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="drawAddressesPref2"
            android:title="@string/draw_routebtn_addresses" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enableZoomPref"
            android:title="@string/enableZoom" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="flipPref"
            android:title="@string/flipUpsideDown" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enableEditPref"
            android:title="@string/enableEdit" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="saveStatesPref"
            android:title="@string/saveStates" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="routesPref"
            android:title="@string/enableRoutes" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="powerControlPref"
            android:title="@string/enable_power_control" />
        <ListPreference
            android:defaultValue="@string/sel_style_default"
            android:entries="@array/styles"
            android:entryValues="@array/style_values"
            android:key="selectStylePref"
            android:summary="select a Style for dark or white background etc."
            android:title="@string/sel_style" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/sxnet_server_settings">
        <!--    <CheckBoxPreference
                android:defaultValue="false"
                android:key="autoIPPref"
                android:title="Automatically configure IP" /> -->
        <EditTextPreference
            android:name="Server address"
            android:defaultValue="@string/default_server_ip"
            android:key="ipPref"
            android:summary="@string/questionmark"
            android:title="Server address"
            android:digits=".0123456789"/>
        <EditTextPreference
            android:name="@string/server_port"
            android:defaultValue="@string/default_sxnet_port"
            android:key="portPref"
            android:summary="@string/questionmark"
            android:title="Server port"
            android:digits="0123456789"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/files_settings">
        <ListPreference
            android:entries="@array/listEmpty"
            android:entryValues="@array/listEmpty"
            android:key="configFilenamePref"
            android:summary="Bitte auswählen"
            android:title="@string/panel_cfg_files" />
    </PreferenceCategory>
</PreferenceScreen>