<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scroll2" android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/title" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/lanbahnpanelTitleString"
			android:textSize="22sp" /> 
		<TextView android:id="@+id/version" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/versionUnknown"
			android:textSize="14sp" android:paddingTop="10sp" />
		<TextView android:id="@+id/connection_state" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/not_connected"
			android:textSize="14sp" android:paddingTop="10sp" />
		<TextView android:id="@+id/copyright" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:autoLink="all"
			android:text="@string/copyright_string"
			android:textSize="14sp" android:paddingTop="10sp" />
		<TextView android:id="@+id/moreinfo" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/moreInfoString"
			android:paddingTop="6sp" android:textSize="14sp" android:autoLink="all" />
		<TextView android:id="@+id/moreinfo2" android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:paddingTop="5sp" android:textSize="12sp" android:autoLink="all" 
			android:text="@string/aboutString"/>
		<TextView android:id="@+id/moreinfo3" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text=""
			android:paddingTop="8sp" android:textSize="8sp" android:autoLink="all" />
		<Button android:id="@+id/cancel" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/back"
			android:textSize="22sp" />
	</LinearLayout>
</ScrollView>