<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_get_panel"
        android:orderInCategory="100"
        android:title="@string/get_panel_from_server"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_check_service"
        android:orderInCategory="100"
        android:title="@string/check_service"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_quit"
        android:orderInCategory="100"
        android:title="@string/quit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_power"
        android:icon="@drawable/power_unknown"
        android:orderInCategory="50"
        android:title="Power"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_connect"
        android:icon="@drawable/nocomm"
        android:orderInCategory="50"
        android:title="Connect"
        app:showAsAction="always" />
</menu>