<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
 
        	<TextView android:id="@+id/locos_title" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/locodb"
		android:textSize="22sp" />
        <ListView android:id="@id/android:list"     android:layout_height="0px" 
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:transcriptMode="alwaysScroll"/>
 
    	<LinearLayout android:id="@+id/some_buttons"
	android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
			<Button android:id="@+id/cancel_button" android:layout_width="0px"
				android:layout_weight="25" android:layout_height="wrap_content"
				android:text="@string/cancel" />
		<Button android:id="@+id/add_button" android:layout_width="0px"
			android:layout_weight="25" android:layout_height="wrap_content"
			android:text="@string/add_loco" />
			<Button android:id="@+id/remove_button" android:layout_width="0px"
				android:layout_weight="25" android:layout_height="wrap_content"
				android:text="@string/remove_loco" />
		<Button android:id="@+id/edit_button" android:layout_width="0px"
			android:layout_weight="25" android:layout_height="wrap_content"

			android:text="@string/edit_loco" />


	</LinearLayout>
</LinearLayout>