<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="192.168.178.29"
        android:key="ipPref"
        android:digits="0123456789."
        android:inputType="textNoSuggestions"
        android:summary="@string/default_server_ip"
        android:title="@string/server_ip" />

    <EditTextPreference
        android:defaultValue="1234"
        android:key="portPref"
        android:digits="0123456789"
        android:inputType="textNoSuggestions"
        android:summary="@string/default_sxnet_port"
        android:title="@string/server_port"
        android:numeric="integer"
        android:maxLength="5" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
