<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="de.blankedv.lanbahnpanel.settings.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/remote_settings"
        android:title="@string/pref_header_server" />

    <header
        android:fragment="de.blankedv.lanbahnpanel.settings.SettingsActivity$DisplayPreferenceFragment"
        android:icon="@drawable/display"
        android:title="@string/pref_header_display" />

    <header
        android:fragment="de.blankedv.lanbahnpanel.settings.SettingsActivity$ControlPreferenceFragment"
        android:icon="@drawable/control"
        android:title="@string/pref_header_control" />


</preference-headers>
