<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|center_horizontal">

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="5sp"
        android:gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/sx_adresse"
            android:textSize="20sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/_sx_bit"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvInverted"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/inverted"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="5sp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <NumberPicker
            android:id="@+id/picker1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:scaleX="1.1"
            android:scaleY="1.1" />

        <NumberPicker
            android:id="@+id/picker2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:scaleX="1.1"
            android:scaleY="1.1" />

        <CheckBox
            android:id="@+id/cbInverted"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/yes_inverted"
            tools:text="Y" />
    </TableRow>

</TableLayout>