<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|center_horizontal" >

   <TableRow
        android:layout_width="match_parent"
        android:layout_margin="5dip"   >

       <TextView
           android:id="@+id/tvAddress"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_margin="5dip"
           android:layout_weight="2"
           android:padding="5dip"
           android:text="@string/adresse"
           android:textSize="18sp" />

       <TextView
           android:id="@+id/tvInverted"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_margin="5dip"
           android:layout_marginLeft="20dip"
           android:layout_weight="1"
           android:padding="5dip"
           android:text="@string/inverted"
           android:textSize="18sp" />

       <TextView
           android:id="@+id/tvAddress2"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_margin="5dip"
           android:layout_weight="2"
           android:padding="5dip"
           android:text="@string/adresse2"
           android:textSize="18sp" />

       <TextView
           android:id="@+id/tvInverted2"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_margin="5dip"
           android:layout_marginLeft="20dip"
           android:layout_weight="1"
           android:padding="5dip"
           android:text="@string/inverted"
           android:textSize="18sp" />



   </TableRow>

   <TableRow
        android:layout_width="match_parent"
        android:layout_margin="5dip" >

        <NumberPicker
            android:id="@+id/picker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="2" />

       <CheckBox
           android:id="@+id/cbInverted"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:layout_margin="18sp"
           android:layout_weight="1"
           android:checked="false"
           android:text="@string/yes_inverted" />


        <NumberPicker
            android:id="@+id/picker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="2" />

        <CheckBox
            android:id="@+id/cbInverted2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="18sp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/yes_inverted" />


    </TableRow>


</TableLayout>